--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <p>欢迎来到YZBJFPV网站，正在测试网站是否可以打开</p>
+    <img src="image.jpg" alt="My Image">
+    <script src="script.js"></script>
+</body>
+</html>
