--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>正在更改内容，期间您可以登陆此链接查看建造进展</h1>
-    <p>欢迎来到YZBJFPV网站，正在测试网站是否可以打开</p>
+    <h1>YZBJFPV</h1>
+    <p>欢迎来到YZBJFPV网站</p>
     <img src="image.jpg" alt="My Image">
     <script src="script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>GitHub Image Embed</title>
+</head>
+<body>
+    <img src="https://github.com/yzbjfpv/yzbjfpv.github.io/raw/6F6D8F6F-7040-4FCB-96.jpg" alt="YZBJFPV首页头图" />
 </body>
 </html>
