--- a/index.html
+++ b/index.html
@@ -1581,11 +1581,11 @@
                 <span>
                     <a href="###" class="closeReport" id="closeReport" onclick="showComplain();">x</a>
                     <a href="/dom/tousu/tousu_complain.php?username=yzbjfpv">
-                        <h2>网站举报</h2>
+                        <h2>YZBJFPV网站加入我们</h2>
                     </a>
-                    <a href="http://www.evyun.cn/reg.php?Version=2016" target="_blank" class="imgInfo">
-                        <img src="https://s.dlssyht.cn/images/reportImg.jpg">
-                        <p>免费五站合一</p>
+                    <a href=" " target="_blank" class="imgInfo">
+                        <imgsrc="https://krseoul.imgtbl.com/i/2024/08/12/66b9a2d999ed5.jpg ">
+                        <p>加我微信拉你进YZBJFPV交流群</p>
                     </a>
                 </span>
             </div>
@@ -1605,9 +1605,9 @@
             <div class="footerConArea">
                 <div class="footerCon">
                                             <div class="footerNav" id="footer_nav">
-                                                                                                <a  href="/yzbjfpv/foot_5021318.html">关于我们</a><em>|</em>                                                                    <a  href="/yzbjfpv/foot_5021319.html">经典案例</a><em>|</em>                                                                    <a  href="/yzbjfpv/foot_5021320.html">新闻动态</a><em>|</em>                                                                    <a  href="/yzbjfpv/foot_5021321.html">服务项目</a><em>|</em>                                                                    <a  href="/yzbjfpv/foot_5021322.html">咨询团队</a><em>|</em>                                                                    <a  href="/yzbjfpv/foot_5021323.html">联系我们</a>                                                                                    </div>
+                                                                                                
                                         <div class="copyright" id="copyright">
-                        <p>Copyright @ 2024 YZBJFPV All rights reserved.YZBJFPV版权所有. 网站合作欢迎联系lyz201966@163.com 一周内必回复，感谢支持</p>
+                        <p>Copyright @ 2024 YZBJFPV All rights reserved.YZBJFPV版权所有. </p>
                                                     <center id="c2"></center>
                                             </div>
                 </div>
@@ -1810,3 +1810,4 @@ window.onscroll=function(){
 </body>
 
     </html>
+
