--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <div class="piclist-area">
             <ul class="piclist-box">
                                                     <li class="list-item">
-                                                <div class="pic-item"  data-imgurl="https://yzbjfpv.github.io/headpicture.png" style="background-color:#ffffff;background-image: url('//aimg8.dlszyht.net.cn/tj/public_pic/loading-wait-bg.gif');"><a  ></a></div>
+                                                <div class="pic-item"  data-imgurl="https://github.com/YZBJFPV/yzbjfpv.github.io/blob/main/headpicture.png" style="background-color:#ffffff;background-image: url('//aimg8.dlszyht.net.cn/tj/public_pic/loading-wait-bg.gif');"><a  ></a></div>
                                             </li>
                                             </ul>
           </div>
