--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div class="piclist-area">
             <ul class="piclist-box">
                                                     <li class="list-item">
-                                                <div class="pic-item"  data-imgurl="https://github.com/YZBJFPV/yzbjfpv.github.io/blob/main/headpicture.png" style="background-color:#ffffff;background-image: url('//aimg8.dlszyht.net.cn/tj/public_pic/loading-wait-bg.gif');"><a  ></a></div>
+                                                <div class="pic-item"  data-imgurl="https://img520.com/44HoCR.png" style="background-color:#ffffff;background-image: url('https://img520.com/44HoCR.png');"><a  ></a></div>
                                             </li>
                                             </ul>
           </div>
