--- a/index.html
+++ b/index.html
@@ -314,15 +314,8 @@
             </div>
     
           <div class="bannerArea" id="banner_area" >
-    <div class="bannerCon">
-      <div class="ev-banner-module banner-smallpic-style-0" data-canvas-type="0" data-effect-type="7" data-auto-time="5" data-duration-time="1">
-        <div class="ev-banner-inner">
-          <div class="canvas-area canvas-style-0"></div>
-          <div class="piclist-area">
-            <ul class="piclist-box">
-            <li class="list-item">
-          <div class="pic-item"  data-imgurl="https://img520.com/44HoCR.png" style="background-color:#ffffff;background-image: url('https://img520.com/44HoCR.png');"><a  ></a></div>
-          </li>
+    
+          <img src="https://img520.com/44HoCR.png" alt="headpicture.png" title="headpicture.png" />
           </ul>
           </div>
 
