--- a/index.html
+++ b/index.html
@@ -156,47 +156,13 @@
         </div>
     </div>    <div  data-fixed="0" data-fixedx="-1"  id="evMo_xzQSB" class="ev-module-edit"     data-big="1" data-small="1" data-threetype="0" style="width:302px; height:75px; left:89px; top:19px; z-index:3;">
         <div class="ev-module-text ev-module-edit-box load-animate" data-animate-name="bounceIn" data-animate-duration="0.80s" data-animate-delay="0.00s" id="Mo_xzQSB">
-           <h1 style="font-family:微软雅黑;" class="ev-text-title-1"><strong><span style="color:#00FFFF;font-family:Segoe Print;">YZBJ</span></strong><span style="color:#0000FF;font-family:Segoe Print;"><strong>F</strong></span><strong><span style="color:#0000FF;font-family:Segoe Print;">PV官网</h1>
+           <h1 style="font-family:微软雅黑;" class="ev-text-title-1"><strong><span style="color:#00FFFF;font-family:Segoe Print;">YZBJ</span></strong><span style="color:#0000FF;font-family:Segoe Print;"><strong>F</strong></span><strong><span style="color:#0000FF;font-family:Segoe Print;">PV</h1>
         </div>
     </div>    <div class="ev-module-edit"  data-fixed="0" data-fixedx="-1"  id="evMo_3cxifa"     data-big="16" data-small="9" data-threetype="4" style="width:270px; height:31px; left:764px; top:34px; z-index:4;">
         <div class="ev-module-edit-box  load-animate" data-animate-name="zoomInDown" data-animate-duration="0.80s" data-animate-delay="0.40s" id="Mo_3cxifa">
             <div class="ev-search-module" data-tishi="&#35831;&#22635;&#20889;&#20851;&#38190;&#35789;！" data-type="1" data-url="" data-param="">
                 <div class="s s-skin-9-4">
-                    <div class="s-i">
-                        <form class="s-f" id="search_form_3cxifa" method="get" action="">
-                            <dl class="s-c" data-type="11" data-url="/dom/search.php?s_m_str_id=3cxifa&username=yzbjfpv&navtype=doc&keyWord=###">
-                                <dt class="s-w">
-                                    <div class="s-w-i">
-                                        <b class="s-w-t">FPV问题</b>
-                                        <em class="s-w-s"></em>
-                                    </div>
-                                </dt>
-                                <dd class="s-w-l">
-                                    <ul class="s-w-l-i">
-                                            <li data-type="11" data-url="/dom/search.php?s_m_str_id=3cxifa&username=yzbjfpv&navtype=doc&keyWord=###" class="w-l-e">
-        <div class="w-l-e-i">
-            <b class="w-l-e-t">FPV问题</b>
-        </div>
-    </li>    <li data-type="10" data-url="/dom/ProSearch.php?s_m_str_id=3cxifa&keyWord=###&username=yzbjfpv" class="w-l-e">
-        <div class="w-l-e-i">
-            <b class="w-l-e-t">TEST页面</b>
-        </div>
-    </li>
-                                    </ul>
-                                </dd>
-                            </dl>
-                            <div class="s-k s-k-place">
-                                <div class="s-k-i">
-                                    <div class="module-zz"></div>
-                                    <div class="s-k-area">
-                                        <em class="s-k-icon"></em>
-                                        <div class="s-k-w">
-                                            <input class="key-word" id="evMoKeyWord_3cxifa" type="text"  data-defaultv="" value="" data-keywordtype="1" >
-                                            <input type="text" class="none">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                
                             <div class="s-b">
                                 <div class="s-b-i"><em class="s-b-icon"></em><b class="s-b-t">&#25628;&#32034;</b></div>
                             </div>
@@ -249,7 +215,7 @@
           <dl class="NMain">
                         <dd  class="NItem NFirst NItemCur"  data-subid="">
                 <table class="NItemTable"><tr><td class="NItemL"></td><td class="NItemM">
-                <a title="&#39318;&#39029;" href="/vip_yzbjfpv.html" ><span>&#39318;&#39029;</span></a>
+                <a title="&#39318;&#39029;" href="/index.html" ><span>&#39318;&#39029;</span></a>
                 </td><td class="NItemR"></td></tr></table>            </dd>
         	<dd  class="NLine"></dd>
             
