--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <table class="NItemTable"><tr>
                     <td class="NItemL"></td>
                     <td class="NItemM"><a href="/question.html"  title="问题及解决方案">
-                        <span>问题及解决方案</span>
+                        <span>问题解决方案</span>
                     </a></td>
                     <td class="NItemR"></td>
                 </tr></table>
