--- a/index.html
+++ b/index.html
@@ -1622,7 +1622,10 @@
                                             <div class="footerNav" id="footer_nav">
                                                                                                 
                                         <div class="copyright" id="copyright">
-                        <p>Copyright @ 2024 YZBJFPV All rights reserved.YZBJFPV版权所有. </p>
+                        <p>Copyright @ 2024 YZBJFPV All rights reserved.YZBJFPV版权所有</p>
+			<p>感谢【@带你飙机带你飞~】为网站提供测试支持</p>
+			<p>2024年8月榜一赞助商：翼效架构</p>
+			<p>***广告位招租，每月5元******广告位招租，每月5元******广告位招租，每月5元***</p>
                                                     <center id="c2"></center>
                                             </div>
                 </div>
