--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gbk">
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta name="applicable-device" content="pc">
-        <title>YZBJFPV-下载中心</title>
+        <title>YZBJFPV高速下载中心</title>
     <meta name="keywords" content="YZBJFPV">
     <meta name="description" content="">
     <meta name="author" content="YZBJFPV">
