--- a/download.html
+++ b/download.html
@@ -2433,8 +2433,22 @@ YZBJFPV网站下载中心的软件均由YZBJFPV服务器提供软件存储和下
 
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"3JGmlzjOiAy43hJo",ck:"3JGmlzjOiAy43hJo",autoTrack:true,hashMode:true,screenRecord:true})</script>
-
-
+</div>
+    </div><div class="ev-module-edit" id="evMo_bUbiz" data-big="21" data-small="3" data-threetype="0" style="width:1200px; height:40px; left:0px; top:0px; z-index:12;">
+    <div class="ev-module-edit-box " id="Mo_bUbiz">
+        <div class="ev-audio-module ev-audio-module-3" data-src="https://aimg8.dlszyht.net.cn/public/src/upload/2281788/Backend/files/website_media/669c8378a8277.mp3" data-auto-play="1" data-loop-play="1" data-src-type="1" data-track-name="Track Name" data-artist-name="Artist Name" data-cover="//aimg8.dlssyht.cn/tj/media_module/a_module_poster_1.png">
+    <audio src="https://aimg8.dlszyht.net.cn/public/src/upload/2281788/Backend/files/website_media/669c8378a8277.mp3"></audio>
+    <div class="a-attribute">
+        <div class="a-body q">
+            <i class="evIcon a-p-btn playing" data-action="playBtn"></i>
+            <div class="a-bar-box">
+                <div class="a-bar" data-action="playBar">
+                    <span class="a-bar-i play-bar-i" style="width: 18.4397%;"><i class="a-bar-c"></i></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
