--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     
         <div class="nav-wrap" id="navWrap">
           </div>
-          <img src="https://img520.com/44HoCR.png" alt="headpicture.png" title="headpicture.png" />
+          <img src="https://img520.com/9njBxR.png" alt="headpicture.png" title="headpicture.png" />
           </ul>
           </div>
 
