--- a/index.html
+++ b/index.html
@@ -1596,11 +1596,11 @@
                 <span>
                     <a href="###" class="closeReport" id="closeReport" onclick="showComplain();">x</a>
                     <a href="/dom/tousu/tousu_complain.php?username=yzbjfpv">
-                        <h2>加入YZBJFPV我们</h2>
+                        <h2>无人机天线</h2>
                     </a>
                     <a href=" " target="_blank" class="imgInfo">
-                        <imgsrc="https://krseoul.imgtbl.com/i/2024/08/12/66b9a2d999ed5.jpg">
-                        <p>加我微信：YGWFK2024</p>
+                        <imgsrc="https://img520.com/9txuQP.png">
+                        <p>厂家直销</p>
                     </a>
                 </span>
             </div>
