--- a/index.html
+++ b/index.html
@@ -1595,10 +1595,10 @@
                         <div class="reportAlt" style="display: none">
                 <span>
                     <a href="###" class="closeReport" id="closeReport" onclick="showComplain();">x</a>
-                    <a href="/dom/tousu/tousu_complain.php?username=yzbjfpv">
+                    <a href="https://img520.com/9txuQP.png">
                         <h2>无人机天线</h2>
                     </a>
-                    <a href=" " target="_blank" class="imgInfo">
+                    <a href="https://img520.com/9txuQP.png">
                         <imgsrc="https://img520.com/9txuQP.png">
                         <p>厂家直销</p>
                     </a>
@@ -1625,7 +1625,7 @@
                         <p>Copyright @ 2024 YZBJFPV All rights reserved.YZBJFPV版权所有</p>
 			<p>感谢【@带你飙机带你飞~】为网站提供测试支持</p>
 			<p>2024年8月榜一赞助商：翼效架构</p>
-			<p>***广告位招租，每月5元******广告位招租，每月5元******广告位招租，每月5元***</p>
+			<p></p>
                                                     <center id="c2"></center>
                                             </div>
                 </div>
@@ -1648,7 +1648,7 @@
 				</div>
 				<div class="sidebar2_listC">
 					<a id="prev_btn" class="prev_btn" href="###">
-						<img src="https://s.dlssyht.cn/images/new_online2016/prev_icon.png">
+						<img src="https://img520.com/9txuQP.png">
 					</a>
 					<ul class="function_list">
                         						<li class="list">
