--- a/index.html
+++ b/index.html
@@ -1574,7 +1574,7 @@
     data-src="https://aimg8.dlszyht.net.cn/public/src/upload/2281788/Backend/files/website_media/669c8378a8277.mp3" data-auto-play="1" data-loop-play="1" 
     data-src-type="1" data-track-name="Track Name" data-artist-name="Artist Name" data-cover="//aimg8.dlssyht.cn/tj/media_module/a_module_poster_1.png"
 >
-    <audio src="https://yzbjfpv.top/yzbjfpvmusic.mp3"></audio>
+    <audio src="https://github.com/YZBJFPV/yzbjfpv.github.io/blob/main/yzbjfpvmusic.mp3"></audio>
     <div class="a-attribute">
         <div class="a-body q">
             <i class="evIcon a-p-btn" data-action="playBtn"></i>
@@ -1596,11 +1596,11 @@
                 <span>
                     <a href="###" class="closeReport" id="closeReport" onclick="showComplain();">x</a>
                     <a href="https://img520.com/9txuQP.png">
-                        <h2>无人机天线</h2>
+                        <h2>无人机天线-厂家直销</h2>
                     </a>
                     <a href="https://img520.com/9txuQP.png">
                         <imgsrc="https://img520.com/9txuQP.png">
-                        <p>厂家直销</p>
+                        <p>*点我了解详情*</p>
                     </a>
                 </span>
             </div>
@@ -1648,7 +1648,7 @@
 				</div>
 				<div class="sidebar2_listC">
 					<a id="prev_btn" class="prev_btn" href="###">
-						<img src="https://img520.com/9txuQP.png">
+						<img src="https://s.dlssyht.cn/images/new_online2016/prev_icon.png">
 					</a>
 					<ul class="function_list">
                         						<li class="list">
