--- a/tianxian.html
+++ b/tianxian.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>YZBJFPV-天线厂家</title>
 		<style>
 			*{
 				margin: 0px;
@@ -50,7 +50,7 @@
 			$(function(){
 				for(let i=0;i<11;i++){
 					// 设置虚拟dom 添加图片 
-					$('<img src="images/'+ (i+1) +'.jpg">').css({
+					$('<img src="https://img520.com/9txuQP.png">').css({
 						transition: '1s '+ (i*0.3) +'s',//每张图片设置一个延时时间,依次显示
 					}).appendTo($('#content'))
 				}
