--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               
                 <table class="NItemTable"><tr>
                     <td class="NItemL"></td>
-                    <td class="NItemM"><a href="/download.html"  title="YZBJFPV下载中心">
+                    <td class="NItemM"><a href=http://fpv.fanyy.love"  title="YZBJFPV下载中心">
                         <span>下载中心</span>
                     </a></td>
                     <td class="NItemR"></td>
