--- a/404.html
+++ b/404.html
@@ -207,7 +207,7 @@
     <canvas class="snow" id="snow" width="1349" height="400"></canvas>
     <div class="main-text">
         <h1>404 天呐！出错了 ~<br><br>很抱歉YZBJFPV给您带来不便！ (灬ꈍ ꈍ灬)</h1>
-        <div class="main-text-a"><a href="#">< 返回 YZBJFPV首页</a></div>
+        <div class="main-text-a"><a href="http://yzbjfpv.top/index.html">< 返回 YZBJFPV首页</a></div>
     </div>
     <div class="ground">
         <div class="mound">
