--- a/yt.html
+++ b/yt.html
@@ -1,4 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>首页-北京帅贩太学亚大实验学校</title>
@@ -1492,4 +1493,5 @@ Symbol、Promise等语法 -->
 
 
 
-</body></html>
+</body>
+</html>
