--- a/yt.html
+++ b/yt.html
@@ -717,7 +717,7 @@ Symbol、Promise等语法 -->
       <!-- <div class="lunbo">
                   <div class="banner" id="b04" style="height: 23.68rem;">
                       <ul>
-                          <li style="height: 600px;background-image: url(https://yatai-oss.yataischool.net/cms/u/cms/www/202303/30092501ui2z.jpeg);background-size: 100% 100%;">
+                          <li style="height: 600px;background-image: url(https://img520.com/yjDT13.jpg);background-size: 100% 100%;">
                           </li>
                       </ul>
                   </div>
@@ -726,15 +726,15 @@ Symbol、Promise等语法 -->
         <div class="swiper-1 swiper-initialized swiper-horizontal swiper-pointer-events" style="position: absolute;top: 0;left: 0;height: 100%;width: 100%;">
           <div class="swiper-wrapper" id="swiper-wrapper-c4f0a0742ab2205e" aria-live="off" style="transition-duration: 0ms; transform: translate3d(-4800px, 0px, 0px);"><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-active" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202404/15142504y66e.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="3" role="group" aria-label="4 / 4">
             </div>
-            <div class="swiper-slide swiper-slide-duplicate-next" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202409/09163659cnrj.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="0" role="group" aria-label="1 / 4">
+            <div class="swiper-slide swiper-slide-duplicate-next" style="height: 100%; background-image: url(&quot;https://img520.com/yjDT13.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="0" role="group" aria-label="1 / 4">
             </div>
-            <div class="swiper-slide" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202404/151425024m17.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="1" role="group" aria-label="2 / 4">
+            <div class="swiper-slide" style="height: 100%; background-image: url(&quot;https://img520.com/yjDT13.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="1" role="group" aria-label="2 / 4">
             </div>
-            <div class="swiper-slide swiper-slide-prev" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202404/151434055hno.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="2" role="group" aria-label="3 / 4">
+            <div class="swiper-slide swiper-slide-prev" style="height: 100%; background-image: url(&quot;https://img520.com/yjDT13.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="2" role="group" aria-label="3 / 4">
             </div>
-            <div class="swiper-slide swiper-slide-active" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202404/15142504y66e.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="3" role="group" aria-label="4 / 4">
+            <div class="swiper-slide swiper-slide-active" style="height: 100%; background-image: url(&quot;https://img520.com/yjDT13.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="3" role="group" aria-label="4 / 4">
             </div>
-          <div class="swiper-slide swiper-slide-duplicate swiper-slide-next" style="height: 100%; background-image: url(&quot;https://yatai-oss.yataischool.net/cms/u/cms/www/202409/09163659cnrj.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="0" role="group" aria-label="1 / 4">
+          <div class="swiper-slide swiper-slide-duplicate swiper-slide-next" style="height: 100%; background-image: url(&quot;https://img520.com/yjDT13.jpg?x-oss-process=image/resize,w_1920/quality,q_90&quot;); background-size: cover; width: 1200px;" data-swiper-slide-index="0" role="group" aria-label="1 / 4">
             </div></div>
           <div class="swiper-pagination swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active" aria-current="true"></span></div>
         <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>  
