--- a/nc.html
+++ b/nc.html
@@ -707,7 +707,7 @@
                                     <div id='module387' _modulestyle='81' _moduleid='387' class='form form387 formStyle81 animateModule ' style='position:absolute;top:266px;left:469px;width:238px;border:10px solid transparent;margin-top:-10px;margin-left:-10px;' _side='0'>
                                         <div class='lightModuleOuterContent lightModuleOuterContent387'>
                                             <div class='J_floatBtnBox floatBtnBox floatBtnStyle floatBtnStyle0 '>
-                                                <a id='module387FlBtn' href='https://yzbj001.m.jzfkw.net/' target='_blank' class='middle floatBtn float_a_btn  ' style='cursor: pointer; font-family: fontface__阿里巴巴普惠体-Heavy__31__1292954566221; '>
+                                                <a id='module387FlBtn' href='https://fpv.fanyy.love' target='_blank' class='middle floatBtn float_a_btn  ' style='cursor: pointer; font-family: fontface__阿里巴巴普惠体-Heavy__31__1292954566221; '>
                                                     <span class='J_floatBtnText m_float_btn__text'>点我进入</span>
                                                 </a>
                                             </div>
