--- a/nc.html
+++ b/nc.html
@@ -196,7 +196,7 @@
                                             <div class='itemContainer'>
                                                 <div title='' id='nav2' class='item itemCol2 itemIndex1 itemSelected' colId='2' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("http://www.yzbj001.jzfkw.net/", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("http://www.yzbj001.jzfkw.net/", "_self", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='http://www.yzbj001.jzfkw.net/' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='http://www.yzbjfpv.top' onclick=';return false;'>
                                                             <svg class='nav_item_icon  left nav_item_icon--hidden' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
                                                                 <g id='首页' transform='translate(-424.616 -4233.563)'>
                                                                     <g id='矩形_2712' data-name='矩形 2712' transform='translate(424.616 4233.563)' fill='currentColor' stroke='#707070' stroke-width='1' opacity='0'>
