--- a/nc.html
+++ b/nc.html
@@ -238,7 +238,7 @@
                                                 </div>
                                                 <div title='' id='nav101' class='item itemCol101 itemIndex2' colId='101' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.m.jzfkw.net/", "_blank", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.m.jzfkw.net/", "_blank", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbj001.m.jzfkw.net/' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://fpv.fanyy.love' onclick=';return false;'>
                                                             <svg class='nav_item_icon  left' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
                                                                 <g id='关于我们' transform='translate(-629.126 -4233.802)'>
                                                                     <g id='矩形_2714' data-name='矩形 2714' transform='translate(629.126 4233.802)' fill='currentColor' stroke='#fff' stroke-width='1' opacity='0'>
@@ -277,7 +277,7 @@
                                                             <div class=' nav_item_icon nav_item_icon--active nav_item_icon--hidden left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAg46jnkwYoh4HoWjCwCTiwCQ.png);'></div>
                                                             <div class='nav_item_icon_wrapper nav_item_icon--left'>
                                                                 <div class='nav_item_wrapper nav_item_icon--left'>
-                                                                    <span class='itemName0 J_nav_item_name'>合作伙伴</span>
+                                                                    <span class='itemName0 J_nav_item_name'>1</span>
                                                                     <span style='display:none;' class='navItemSubName J_nav_item_subname'>Nav</span>
                                                                 </div>
                                                                 <div class='nav_item_arrow J_nav_item_arrow hide nav_item_arrow_hollow_triangle' data-pack-modules-len='0'></div>
@@ -295,7 +295,7 @@
                                                             <div class=' nav_item_icon nav_item_icon--active nav_item_icon--hidden left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAgmK-nkwYolMflKDCwCTiwCQ.png);'></div>
                                                             <div class='nav_item_icon_wrapper nav_item_icon--left'>
                                                                 <div class='nav_item_wrapper nav_item_icon--left'>
-                                                                    <span class='itemName0 J_nav_item_name'>新闻中心</span>
+                                                                    <span class='itemName0 J_nav_item_name'>2</span>
                                                                     <span style='display:none;' class='navItemSubName J_nav_item_subname'>Nav</span>
                                                                 </div>
                                                                 <div class='nav_item_arrow J_nav_item_arrow hide nav_item_arrow_hollow_triangle' data-pack-modules-len='0'></div>
@@ -329,7 +329,7 @@
                                                             </svg>
                                                             <div class='nav_item_icon_wrapper nav_item_icon--left'>
                                                                 <div class='nav_item_wrapper nav_item_icon--left'>
-                                                                    <span class='itemName0 J_nav_item_name'>加入微信交流群</span>
+                                                                    <span class='itemName0 J_nav_item_name'>3</span>
                                                                     <span style='display:none;' class='navItemSubName J_nav_item_subname'>Nav</span>
                                                                 </div>
                                                                 <div class='nav_item_arrow J_nav_item_arrow hide nav_item_arrow_hollow_triangle' data-pack-modules-len='0'></div>
